# susengbot

./: LICENSE  README.md  package.yaml  stack.yaml  susengbot.cabal
app/: Main.hs
src/: Main.hs
