cabal-version: 3.0

name:           susengbot
version:        0.1.1.0
author:         Sven Miesner
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files: README.md

executable susengbot
  main-is: Main.hs
  ghc-options: -O2 -threaded
  hs-source-dirs: app
  build-depends:
      base ^>=4.19.1.0
    , bytestring
    , text
    , microaeson
    , http-client
    , http-client-openssl
    , sqlite-simple
    , time
  default-language: Haskell2010
